fix search input overflow over clear x

--- a/app/assets/stylesheets/zammad.css.scss
+++ b/app/assets/stylesheets/zammad.css.scss
@@ -1898,7 +1898,7 @@ footer {
 
   .search input {
     width: 100%;
-    padding: 5px 10px 5px 33px;
+    padding: 5px 33px 5px 33px;
     height: 30px;
     color: #ECECEC;
     background: #31373b;
